--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang=”pt-br” xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
@@ -14,7 +13,7 @@
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Bootstrap para testes, apagar depois que configurar thymeleaf-->
-	<link href="funcionario/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="vaga/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
 	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
@@ -31,23 +30,22 @@
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="/">App RH</a>
+				<a class="navbar-brand" href="#">App RH</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="/funcionarios">Funcionários</a></li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarFuncionario">Cadastrar Funcionário</a>
-						</li>
-						<li class="nav-item"><a class="nav-link" href="/vagas">
+						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+
+						<li class="nav-item"><a class="nav-link" href="#">
 								<< Listar Vagas>>
 							</a></li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
+						<li class="nav-item"><a class="nav-link" href="#">
 								<< Cadastrar Vaga>>
-							</a>
+							</a></li>
+
 					</ul>
 				</div>
 			</div>
@@ -59,21 +57,7 @@
 		<br> <br>
 
 		<div class="row">
-			<div class="col">
-				<div class="card text-center">
-					<div class="card-header card-title">
-						<h3>Funcionários</h3>
-					</div>
-					<div class="card-body">
 
-						<p class="card-text">Módulo responsável pelos funcionários da
-							agência de RH.</p>
-						<a href="/funcionarios" class="btn btn-primary">Listar
-							Funcionários</a> <a href="/cadastrarFuncionario" class="btn btn-success">Cadastrar
-							Funcionário</a>
-					</div>
-				</div>
-			</div>
 			<div class="col">
 				<div class="card text-center">
 					<div class="card-header  card-title">
@@ -82,7 +66,7 @@
 					<div class="card-body">
 						<p class="card-text">Módulo responsável pelas vagas ofertadas
 							pela agência de RH.</p>
-						<a href="/vagas" class="btn btn-primary">Listar Vagas</a> <a href="/cadastrarVaga"
+						<a href="#" class="btn btn-primary">Listar Vagas</a> <a href="#"
 							class="btn btn-success">Cadastrar Vagas</a>
 					</div>
 				</div>
@@ -91,7 +75,8 @@
 
 		</div>
 
-		<div style="height: 100px;"></div>
+		<br>
+
 
 
 		<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
@@ -104,7 +89,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 
-		</script>
+			</script>
 </body>
 
 </html>
